# AEM_2026

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.ps1  setup.sh
.arduino15/: inventory.yaml
data/: caffeine_alertness.csv  memory_recall.csv  reaction_times.csv
docs/: Thermistor_conversion.txt
examples/: Barometer_and_temperature
examples/Barometer_temperature/: Barometer_temperature.ino
examples/DFRobot_IMU_BlackPill/: DFRobot_IMU_BlackPill.ino
examples/Peltier/: Peltier.ino
examples/Read_Analog_Pin/: Read_Analog_Pin.ino
examples/Read_Barometer_Temperature/: Read_Barometer_Temperature.ino
examples/Read_Data/: MAX11300.h  Read_Data.ino  Read_Data.py
examples/Read_Temperature_Sensor/: MAX11300.cpp  MAX11300.h  Read_Temperature_Sensor.ino
examples/Write_Analog_Pin/: MAX11300.cpp  MAX11300.h  Write_Analog_Pin.ino
examples/Write_Data/: Write_Data.ino  Write_Data.py
examples/blink/: blink.ino
notebooks/: 01_introduction.ipynb  02_experimental_design.ipynb  03_statistical_analysis.ipynb
src/aem/: __init__.py  data.py  design.py  statistics.py  visualization.py
tests/: test_data.py  test_design.py  test_statistics.py
